--- a/M220JS: MongoDB for JavaScript Developers/.env
+++ b/M220JS: MongoDB for JavaScript Developers/.env
@@ -2,6 +2,6 @@
 # Rename this file to .env after filling in your MFLIX_DB_URI and your SECRET_KEY
 # Do not surround the URI with quotes
 SECRET_KEY=super_secret_key_is_changed_to_mukhtar_tanimu_garba
-MFLIX_DB_URI=mongodb+srv://m220student:m220password@mflix.sa8ij.mongodb.net
+MFLIX_DB_URI=mongodb+srv://m220student:m220password@mflix.sa8ij.mongodb.net/sample_mflix
 MFLIX_NS=sample_mflix
 PORT=5000
